test/expected/explain_ii.out
explain inline int x
               ^
16: error: inline variables not supported in C
